# packaging-publishing-trc43

./: .gitignore  LICENSE  breast_cancer_model.pkl  mkdocs.yml  notebook.ipynb  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
cancer_prediction/: streamlit_app.py
docs/: index.md
tests/: test_CancerModel.py
